--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_NAME= api-gateway
 TIMEOUT=5000
 
 URL_SERVICE_MEDIA=http://localhost:8080
-HOSTNAME=http://localhost:3000
+HOSTNAME=
 
 JWT_SECRET=ahmadzakiarrozi141196
 JWT_SECRET_REFRESH_TOKEN=
